--- a/src/main/resources/server.fxml
+++ b/src/main/resources/server.fxml
@@ -7,7 +7,8 @@
 
 
 <GridPane fx:controller="simplechat.server.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="TOP_LEFT" hgap="10" vgap="10">
+          xmlns:fx="http://javafx.com/fxml" alignment="TOP_LEFT" hgap="10" vgap="10"
+          maxWidth="Infinity" maxHeight="Infinity" prefWidth="Infinity" prefHeight="Infinity">
 
     <padding><Insets top="10" right="10" bottom="10" left="10"/></padding>
 
@@ -22,16 +23,22 @@
     <TextArea fx:id="textArea"
               text="Welcome to Simple Chat!"
               editable="false"
+              GridPane.hgrow="ALWAYS"
+              GridPane.vgrow="ALWAYS"
               GridPane.columnIndex="0"
               GridPane.rowIndex="1"
               GridPane.columnSpan="3"/>
 
     <ListView fx:id="listView"
+              GridPane.hgrow="ALWAYS"
+              GridPane.vgrow="ALWAYS"
               GridPane.columnIndex="3" GridPane.rowIndex="1" GridPane.columnSpan="1"/>
 
     <TextField fx:id="textField"
                text=""
                editable="true"
+               GridPane.hgrow="ALWAYS"
+               GridPane.vgrow="ALWAYS"
                GridPane.columnIndex="0"
                GridPane.rowIndex="2"/>
 
